--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
 The AfriSight community has thousands of end-user and business consumer members across Africa, men and women of all the ages. As a member you regularly receive invitation to take part in surveys. You can answer our paid surveys when and where it suits you, on your mobile, at home, work or on-the-go.</p>
 <ul>
-      <li> <a href="www.google">About us</li>
+      <li> <a href="www.google.com">About us</li>
       <li><a href="www.google.com">Rewards</li>
-      <li><a href="www.google">Contacts</li>
-      <li><a href="www.google">Privacy Policy & Cookies</li>
-      <li><a href="www.google">Term's & Conditions</li>
+      <li><a href="www.google.com">Contacts</li>
+      <li><a href="www.google.com">Privacy Policy & Cookies</li>
+      <li><a href="www.google.com">Term's & Conditions</li>
 </ul>
 </body>
